Fixed alliging issue in the navbar on mobile

--- a/resources/sass/layout/_navbar.scss
+++ b/resources/sass/layout/_navbar.scss
@@ -51,9 +51,11 @@
 		}
 		
 		&__link {
-			display: flex;
-			align-items: center;
-			height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            height: 100%;
 			color: $color-white;
 		}
 	}
